Fix duplicated loop variable names after r155743 https://bugs.webkit.org/show_bug.cgi?id=121667

Reviewed by Andreas Kling.

Do not use the same name for variables in nested loops to fix a compiler warning.

* page/animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):


Canonical link: https://commits.webkit.org/139668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156153 268f45cc-cd09-0410-ab3c-d52691b4dbfc